Request pokemon list

--- a/css/index.css
+++ b/css/index.css
@@ -18,5 +18,38 @@ body, html {
     --red-color: #E64556;
     --green-color: #31AE9D;
     --blue-color: #065A9C;
+    --blue-color-dark: #04477B;
     --orange-color: #F15F3E;
+}
+
+.search-bar-form {
+    display: flex;
+}
+.search-bar-form input {
+    background-color: var(--gray-1);
+    margin: 0;
+    border-radius: 14px 0 0 14px;
+    height: 60px;
+    color: var(--text-color);
+    border: 0;
+    width: 100%;
+    padding: 0;
+    outline: none;
+    box-sizing: border-box;
+    padding: 2%;
+}
+.search-bar-form button {
+    background-color: var(--red-color);
+    margin: 0;
+    border-radius: 0 14px 14px 0;
+    height: 60px;
+    color: var(--white-color);
+    border: 0;
+    width: 60px;
+    height: 60px;
+    cursor: pointer;
+    transition: 0.25s;
+}
+.search-bar-form button:hover {
+    opacity: .7;
 }
