--- a/css/home.css
+++ b/css/home.css
@@ -30,37 +30,8 @@ body {
     margin-bottom: 1%;
 }
 
-.main-container form {
-    display: flex;
+.search-bar-form {
     width: 100%;
-}
-.main-container form input {
-    background-color: var(--gray-1);
-    margin: 0;
-    border-radius: 14px 0 0 14px;
-    height: 60px;
-    color: var(--text-color);
-    border: 0;
-    width: 100%;
-    padding: 0;
-    outline: none;
-    box-sizing: border-box;
-    padding: 2%;
-}
-.main-container form button {
-    background-color: var(--red-color);
-    margin: 0;
-    border-radius: 0 14px 14px 0;
-    height: 60px;
-    color: var(--white-color);
-    border: 0;
-    width: 60px;
-    height: 60px;
-    cursor: pointer;
-    transition: 0.25s;
-}
-.main-container form button:hover {
-    opacity: .7;
 }
 
 .action-content {
@@ -77,7 +48,7 @@ body {
     justify-content: space-between;
     align-items: center;
     border: 0;
-    padding: 2%;
+    padding: 2.5% 2%;
     margin-bottom: 2%;
     transition: .25s;
     cursor: pointer;
