Add pokemon detail

--- a/css/index.css
+++ b/css/index.css
@@ -13,6 +13,7 @@ body, html {
 
 :root {
     --gray-1: #E0E0E0;
+    --gray-2: #EBEBEB;
     --text-color: #4F4F4F;
     --white-color: #fff;
     --red-color: #E64556;
